[tool.poetry]
name = "csgoroll-withdrawbot"
version = "0.1.0"
description = ""
authors = ["Brenno <brenno1804@gmail.com>"]
readme = "README.md"
packages = [{include = "csgoroll_withdrawbot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
